--- a/package.json
+++ b/package.json
@@ -19,8 +19,8 @@
     "react-dom": "16.8.6",
     "react-dropzone": "^14.2.3",
     "react-file-icon": "^1.4.0",
-    "react-tippy": "^1.4.0",
-    "uuid": "^9.0.1"
+    "react-hot-toast": "^2.4.1",
+    "react-tippy": "^1.4.0"
   },
   "devDependencies": {
     "@microsoft/eslint-plugin-power-apps": "^0.2.33",
