--- a/package.json
+++ b/package.json
@@ -27,7 +27,9 @@
     "react-image": "^4.1.0",
     "react-tippy": "^1.4.0",
     "url": "^0.11.3",
-    "util": "^0.12.5"
+    "util": "^0.12.5",
+    "x-data-spreadsheet": "^1.1.9",
+    "xlsx": "https://cdn.sheetjs.com/xlsx-0.20.2/xlsx-0.20.2.tgz"
   },
   "devDependencies": {
     "@microsoft/eslint-plugin-power-apps": "^0.2.33",
@@ -40,14 +42,18 @@
     "@types/uuid": "^9.0.8",
     "@typescript-eslint/eslint-plugin": "^7.7.1",
     "@typescript-eslint/parser": "^7.7.1",
+    "css-loader": "^7.1.2",
     "eslint": "^8.57.0",
     "eslint-plugin-import": "^2.29.1",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^6.1.1",
     "eslint-plugin-react": "^7.34.1",
+    "less": "^4.2.0",
+    "less-loader": "^12.2.0",
     "pcf-scripts": "^1",
     "pcf-start": "^1",
     "react": "^17.0.2",
+    "style-loader": "^4.0.0",
     "typescript": "^4.9.5"
   }
 }
