--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "@fluentui/react": "^8.29.0",
+    "@types/xrm": "^9.0.81",
     "@uifabric/file-type-icons": "^7.10.11",
     "babel-runtime": "^6.26.0",
     "dropzone": "^6.0.0-beta.2",
