--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-hot-toast": "^2.4.1",
     "react-image": "^4.1.0",
     "react-tippy": "^1.4.0",
+    "react-viewer": "^3.2.2",
     "url": "^0.11.3",
     "util": "^0.12.5"
   },
